Wrapped nav in header and fixed HTML structure and comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ h3 {
 
 .section {
   padding-top: 150px; /*prevents the navbar to overlap the main content*/
+  padding-bottom: 50px;
 }
 
 .list-style {
@@ -77,10 +78,8 @@ h3 {
 }
 
 /* Header styling */
-#header {
+#hero-home {
   background: url("../img/game_room.jpg") no-repeat center center/cover;
-  height: 600px;
-  width: 100%;
 }
 
 #hero-text {
@@ -129,8 +128,6 @@ h3 {
 
 #hero-signup {
   background: url("../img/gaming.jpg") no-repeat top center/cover;
-  height: 700px;
-  width: 100%;
 }
 
 /* Footer styles */
@@ -182,5 +179,5 @@ footer {
 
 #error-text {
   font-family: var(--secondary-font);
-  font-size: x-large;
+  font-size: 30px;
 }
